--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>class lectures(Nate)</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="css/stlye.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="css/styl e.css" />
 </head>
 <body>
+
+    <p></p>
     
 
     <script src="js/main.js"></script>
