--- a/index.html
+++ b/index.html
@@ -6,14 +6,28 @@
     <title>class lectures(Nate)</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="css/style.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
+    <p id="demo"></p>
+
+    <p id="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus dicta amet officiis, possimus nam fuga ad tempora? Quisquam asperiores laboriosam voluptatibus neque vel quasi veniam, tempora sapiente quaerat, totam delectus.</p>
+    <button id="btn">red</button>
+    <button id="btn2">blue</button>
+    <button id="refresh">refresh</button>
+
+    <button type="button" class="blue" ondblclick="changeColor('blue');">i am blue Ivy</button>
+    <button type="button" class="red" onclick="changeColor('red');">i am red Ivy</button>
 
     
     
 
-    <script src="js/main.js"></script>
-    <script src="js/alert.js"></script>
+    <!-- <script src="js/main.js"></script>
+    <script src="js/alert.js"></script> -->
+    <!-- <script src="js/objects.js"></script> -->
+    <!-- <script src="js/objects_and_prototypes.js"></script> -->
+    <!-- <script src="js/pizza.js"></script> -->
+    <script src="js/dom.js"></script>
 
 </body>
 </html>
