--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
-    <p id="demo"></p>
+    <!-- <p id="demo"></p>
 
     <p id="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus dicta amet officiis, possimus nam fuga ad tempora? Quisquam asperiores laboriosam voluptatibus neque vel quasi veniam, tempora sapiente quaerat, totam delectus.</p>
     <button id="btn">red</button>
@@ -17,9 +17,27 @@
     <button id="refresh">refresh</button>
 
     <button type="button" class="blue" ondblclick="changeColor('blue');">i am blue Ivy</button>
-    <button type="button" class="red" onclick="changeColor('red');">i am red Ivy</button>
+    <button type="button" class="red" onclick="changeColor('red');">i am red Ivy</button> -->
+<!-- <form action="">
+    <div class="form-group"> 
+        <label for="password-input">password</label>
+        <input type="password" id="password-input" class="form-control">
+        <small>please enter a password between 6 and 12 characters</small>
 
-    
+    </div>
+    <button type="submit" id="submit-button" class="btn btn-primary" disabled="true">Submit</button>
+</form> -->
+<form action="">
+    <div class="form-group"> 
+        <label for="password-input">password</label>
+        <input type="password" id="password-input" class="form-control">
+        <input type="condirm" id="confirm-input" class="form-control">
+
+        <small>password must match input above</small>
+
+    </div>
+    <button type="submit" id="submit-button" class="btn btn-primary" disabled="true">Submit</button>
+</form>
     
 
     <!-- <script src="js/main.js"></script>
@@ -27,7 +45,8 @@
     <!-- <script src="js/objects.js"></script> -->
     <!-- <script src="js/objects_and_prototypes.js"></script> -->
     <!-- <script src="js/pizza.js"></script> -->
-    <script src="js/dom.js"></script>
+    <!-- <script src="js/dom.js"></script> -->
+    <script src="js/userInputs.js"></script>
 
 </body>
 </html>
