--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     <link rel="stylesheet" type="text/css" media="screen" href="css/stlye.css" />
 </head>
 <body>
-    
-
+   
     <script src="js/main.js"></script>
     <script src="js/alert.js"></script>
-
+    <script src="js/challengeOne.js"></script>
+    <script src="js/lmsLessons.js"></script>
 </body>
 </html>
